# myCPP

./: .travis.yml  CMakeLists.txt  README.md  lib.cpp  main.cpp  test_main.cpp
